Fix width of agreement popups on mobile

--- a/resources/assets/sass/components/micromodal.scss
+++ b/resources/assets/sass/components/micromodal.scss
@@ -21,6 +21,7 @@ modal {
     background-color: #e9ecf3;
     padding: 30px;
     width: 640px;
+    max-width: 100%;
     max-height: 100vh;
     border-radius: 4px;
     overflow-y: auto;
